--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -242,21 +242,22 @@ p {
     @apply mt-0;
 }
 .project-cards, .font-cards {
-    @apply flex flex-col gap-1;
+    @apply flex flex-col gap-1 ml-0 list-none;
 }
-.project-cards .project-card:not(:last-child):not(:first-child):not(:only-child), .font-cards .font-card:not(:last-child):not(:first-child):not(:only-child) {
+.project-cards > li:not(:last-child):not(:first-child):not(:only-child) > .project-card, .font-cards > li:not(:last-child):not(:first-child):not(:only-child) > .font-card {
     @apply rounded-md;
 }
-.project-cards .project-card:last-child:not(:only-child), .font-cards .font-card:last-child:not(:only-child) {
+.project-cards > li:last-child:not(:only-child) > .project-card, .font-cards > li:last-child:not(:only-child) > .font-card {
     @apply rounded-t-md;
 }
-.project-cards .project-card:first-child:not(:only-child), .font-cards .font-card:first-child:not(:only-child) {
+.project-cards > li:first-child:not(:only-child) > .project-card, .font-cards > li:first-child:not(:only-child) > .font-card {
     @apply rounded-b-md;
 }
+.project-cards > li, .font-cards > li { @apply ml-0; }
 .project-card, .font-card {
     height: 100%;
     padding: 1rem;
-    @apply flex flex-col items-center sm:flex-row sm:gap-4 bg-(--ui-bg-muted) hover:bg-(--ui-bg-elevated) rounded-3xl transition-colors duration-100 ease-fluid;
+    @apply flex flex-col items-center sm:flex-row sm:gap-4 bg-(--ui-bg-muted) hover:bg-(--ui-bg-elevated) rounded-3xl transition-colors duration-100 ease-fluid ml-0;
     h3 { @apply text-2xl font-bold; }
     h3,p { z-index: 1; }
     img { @apply mb-2 sm:mb-0 aspect-video object-cover w-full sm:max-w-56; }
@@ -273,7 +274,7 @@ p {
     .project-card-content, .font-card-content {
         @apply block w-full;
     }
-    &:disabled, &[disabled] {
+    &.disabled {
         @apply opacity-50 pointer-events-none cursor-not-allowed;
     }
 }
